--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "MIT",
   "dependencies": {
     "md5": "^2.2.1",
-    "react-native-qrcode-svg": "^5.1.1",
-    "react-native-svg": "^7.1.2"
+    "react-native-qrcode-svg": "^5.1.1"
   }
 }
